# casdoor-faceid-service

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
casdoor_faceid_service/: api.py  config.py  engine.py  preload.py
tests/: test_api_auth.py  test_config.py  test_preload.py  test_service.py
