[project]
name = "casdoor-faceid-service"
version = "0.1.0"
description = "Stateless UniFace-backed Face ID service for Casdoor"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
]

[project.optional-dependencies]
cpu = [
  "uniface[cpu]",
]
gpu = [
  "onnxruntime-gpu<1.27",
  "uniface[gpu]",
]

[project.scripts]
casdoor-faceid-service = "casdoor_faceid_service.main:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["casdoor_faceid_service*"]
